--- a/medical-clinics-frontend/src/app/common/nav/nav.component.html
+++ b/medical-clinics-frontend/src/app/common/nav/nav.component.html
@@ -1,1 +1,39 @@
-<p>nav works!</p>
+<div class="nav-container">
+  <div class="mini-navbar">
+    <ul>
+      @if (isLogged) {
+        <li class="user-profile-btn">
+          <a routerLink="/profile">Profile</a>
+        </li>
+        <li>
+          <a (click)="logout()">Logout</a>
+        </li>
+      } @else {
+        <li class="hover:cursor-pointer">
+          <a routerLink="/login">Login</a>
+        </li>
+        <li class="hover:cursor-pointer">
+          <a routerLink="/register">Register</a>
+        </li>
+      }
+      @if(isAdmin()){
+        <li>
+          <a routerLink="/users">Users</a>
+        </li>
+      }
+    </ul>
+  </div>
+  <nav>
+    <ul>
+      <li class="hover:cursor-pointer">
+        <a routerLink="/clinics">Clinics</a>
+      </li>
+      <li class="hover:cursor-pointer">
+        <a routerLink="/">Undefined</a>
+      </li>
+      <li class="hover:cursor-pointer">
+        <a routerLink="/">Undefined</a>
+      </li>
+    </ul>
+  </nav>
+</div>
