--- a/medical-clinics-frontend/src/app/pages/main/main.component.html
+++ b/medical-clinics-frontend/src/app/pages/main/main.component.html
@@ -1,5 +1,5 @@
-<div class="absolute inset-y-0 right-0 main-container">
-  <app-clinic-list
-    [clinics]="clinics"
-  ></app-clinic-list>
-</div>
+<app-clinic-list/>
+<app-authentication>
+  <app-edit-profile/>
+  <app-profile/>
+</app-authentication>
