--- a/medical-clinics-frontend/src/styles.css
+++ b/medical-clinics-frontend/src/styles.css
@@ -1,12 +1,59 @@
 @import "tailwindcss";
 @import "./typography.css";
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
-  position: absolute;
   background: oklch(0.896 0.031 248.178);
+}
+
+body > app-root:nth-child(1) {
+  display: flex;
+}
+
+.main-container {
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(86, 124, 149, 0.6), 0 6px 20px 0 rgba(207, 237, 255, 0.19);
+  min-height: 100vh;
+  margin: 0 1rem;
+  padding: 2rem 1rem;
+}
+
+.nav-container {
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(86, 124, 149, 0.6), 0 6px 20px 0 rgba(207, 237, 255, 0.19);
+  min-height: 100vh;
+  margin-left: 0.5rem;
+  flex-grow: 1;
+  padding: 1rem 0;
+}
+
+input:focus {
+  outline: none;
+}
+
+input {
+  border: 2px solid #5f859c;
+  border-radius: 5px;
+  padding: 0.1rem 0.5rem;
+  margin: 0 1rem;
+}
+
+.field-info:hover > .info-text {
+  display: block;
+  border: 2px solid #5f859c;
+  color: #5f859c;
+  padding: 0.5rem;
+  border-radius: 3px;
+  position: absolute;
+  font-size: 0.8rem;
+  width: 10rem;
+  left: 29%;
+  top: 10%;
+  z-index: 10;
+  background: #ffffff;
 }
