--- a/medical-clinics-frontend/src/styles.css
+++ b/medical-clinics-frontend/src/styles.css
@@ -18,18 +18,24 @@ body > app-root:nth-child(1) {
 .main-container {
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(86, 124, 149, 0.6), 0 6px 20px 0 rgba(207, 237, 255, 0.19);
-  min-height: 100vh;
+  height: 100vh;
   margin: 0 1rem;
   padding: 2rem 1rem;
+  overflow: scroll
 }
 
 .nav-container {
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(86, 124, 149, 0.6), 0 6px 20px 0 rgba(207, 237, 255, 0.19);
-  min-height: 100vh;
+  height: 100vh;
+  width: 8rem;
   margin-left: 0.5rem;
   flex-grow: 1;
   padding: 1rem 0;
+}
+
+.nav-container a {
+  text-align: center;
 }
 
 input:focus {
@@ -63,4 +69,9 @@ button {
   border-radius: 3px;
   padding: 0.3rem 0.75rem;
   color: #ffffff;
+}
+
+button:hover {
+  cursor: pointer;
+  box-shadow: 0 0 3px 2px rgba(38, 166, 255, 0.87);
 }
