Add create note page and change some styles

--- a/medical-clinics-frontend/src/app/common/nav/nav.component.html
+++ b/medical-clinics-frontend/src/app/common/nav/nav.component.html
@@ -19,6 +19,12 @@
           <li>
             <a routerLink="/physician-notes">My outpatient<span class="block">sheets</span></a>
           </li>
+          <li>
+            <a routerLink="/create-note">Create
+              <span>outpatient</span>
+              <span class="block">sheet</span>
+            </a>
+          </li>
         }
         @if (isAdmin()) {
           <li>
