--- a/medical-clinics-frontend/src/app/pages/errors/forbidden/forbidden.component.html
+++ b/medical-clinics-frontend/src/app/pages/errors/forbidden/forbidden.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="error">
-    <img ngSrc="https://thememiles.com/blog/wp-content/uploads/2020/07/403-forbidden.png"
-         alt="forbidden-403-img" fill>
+    <img src="https://thememiles.com/blog/wp-content/uploads/2020/07/403-forbidden.png"
+         alt="forbidden-403-img">
     <p>Not authorized visit <a routerLink="/clinics">clinics</a> and try something else.</p>
   </div>
 </div>
