--- a/medical-clinics-frontend/src/app/pages/errors/internal-server-error/internal-server-error.component.html
+++ b/medical-clinics-frontend/src/app/pages/errors/internal-server-error/internal-server-error.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="error">
-    <img ngSrc="https://w3webhosting.net/w3press/wp-content/uploads/2017/06/500-Internal-Web-Server-Error.png"
-         alt="internal-server-error-500-img" fill>
+    <img src="https://w3webhosting.net/w3press/wp-content/uploads/2017/06/500-Internal-Web-Server-Error.png"
+         alt="internal-server-error-500-img">
     <p>Please visit <a routerLink="/clinics">clinics</a> if error persist try later we working on it.</p>
   </div>
 </div>
