--- a/medical-clinics-frontend/src/app/pages/errors/page-not-found/page-not-found.component.html
+++ b/medical-clinics-frontend/src/app/pages/errors/page-not-found/page-not-found.component.html
@@ -1,8 +1,8 @@
 <div class="main-container">
 
   <div class="error">
-    <img ngSrc="https://www.surgeonsadvisor.com/wp-content/uploads/2023/09/404-error-medical-professional-1024x683.jpg"
-         alt="page-not-pound-404-img" fill>
+    <img src="https://www.surgeonsadvisor.com/wp-content/uploads/2023/09/404-error-medical-professional-1024x683.jpg"
+         alt="page-not-pound-404-img">
     <p>Visit our <a routerLink="/clinics">clinics</a> and try from there.</p>
   </div>
 </div>
