--- a/medical-clinics-frontend/src/typography.css
+++ b/medical-clinics-frontend/src/typography.css
@@ -2,6 +2,7 @@ html{
   font-family: Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  color: #2b5e7e;
 }
 p{
   padding-bottom: 1.5rem;
