--- a/medical-clinics-frontend/src/app/pages/users/users.component.html
+++ b/medical-clinics-frontend/src/app/pages/users/users.component.html
@@ -14,7 +14,7 @@
               <p> Street: {{ user.status }}</p>
             </div>
             <div class="buttons-container">
-              <button class="action-button" (click)="blockUser(user.id)">Block</button>
+              <button class="action-button profile-inactive" (click)="blockUser(user.id)">Block</button>
               <button class="action-button" (click)="switchRole(user.id)">Switch role</button>
             </div>
           </div>
