--- a/medical-clinics-frontend/src/app/pages/create-note/create-note.component.css
+++ b/medical-clinics-frontend/src/app/pages/create-note/create-note.component.css
@@ -10,13 +10,12 @@
   gap: 1.5rem;
 }
 
-form.edit-account {
+form.form {
   display: flex;
   gap: 1rem;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  flex-direction: column;
   margin: 3rem;
 }
 
@@ -27,8 +26,23 @@ p.error {
   text-align: right;
   color: #DC3D7AD6;
 }
+.patient-wrapper{
+  border: 1px solid rgba(38, 166, 255, 0.87);
+  border-radius: 4px;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  flex-grow: 1;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+.patient-wrapper p{
+  text-align: center;
+  display: block;
+  padding: 0.5rem;
+}
 
-.edit-account > fieldset {
+.form > fieldset {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -46,6 +60,7 @@ p.error {
 
 .field-wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
