--- a/medical-clinics-frontend/src/styles.css
+++ b/medical-clinics-frontend/src/styles.css
@@ -75,6 +75,14 @@ button {
   padding: 0.3rem 0.75rem;
   color: #ffffff;
 }
+button.profile-inactive{
+  background: #DC3D7AD6;
+}
+
+button.profile-inactive:hover {
+  cursor: pointer;
+  box-shadow: 0 0 3px 2px rgba(220, 61, 122, 0.84);
+}
 
 button:hover {
   cursor: pointer;
