--- a/medical-clinics-frontend/src/styles.css
+++ b/medical-clinics-frontend/src/styles.css
@@ -33,7 +33,7 @@ body > app-root:nth-child(1)>*:nth-child(3) {
   background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(86, 124, 149, 0.6), 0 6px 20px 0 rgba(207, 237, 255, 0.19);
   height: 100vh;
-  width: 8rem;
+  width: 9rem;
   margin-left: 0.5rem;
   flex-grow: 1;
   padding: 1rem 0;
@@ -103,9 +103,9 @@ button:hover {
   align-items: center;
   gap: 1rem;
 }
-.error a {
+a {
   color: #26a6ff;
 }
-.error a:hover {
+a:hover {
   cursor: pointer;
 }
