add page for generating schedule

--- a/medical-clinics-frontend/src/app/common/nav/nav.component.html
+++ b/medical-clinics-frontend/src/app/common/nav/nav.component.html
@@ -25,6 +25,9 @@
               <span class="block">sheet</span>
             </a>
           </li>
+          <li>
+            <a [routerLink]="['/schedule', 'new']">Add schedule</a>
+          </li>
         }
         @if (isAdmin()) {
           <li>
