--- a/medical-clinics-frontend/src/app/pages/edit-profile/edit-profile.component.html
+++ b/medical-clinics-frontend/src/app/pages/edit-profile/edit-profile.component.html
@@ -7,9 +7,8 @@
         <div class="field-wrapper">
           <label for="firstName">First name:</label>
           <div>
-
-            <input value="{{userData?.firstName" type="text" id="firstName" name="firstName" class="form-control"
-                   ngModel
+            <input type="text" id="firstName" name="firstName" class="form-control"
+                   [(ngModel)]="userData.firstName"
                    required minlength="2" maxlength="30" pattern="^[A-Za-z]+$" #firstName="ngModel"/>
             <span class="field-info">?<span class="info-text">Field must be long between 2 and 30 characters and contain only latin letters!</span></span>
           </div>
@@ -32,7 +31,8 @@
         <div class="field-wrapper">
           <label for="lastName">Last name:</label>
           <div>
-            <input type="text" id="lastName" name="lastName" class="form-control" value="{{userData?.lastName}}" ngModel
+            <input type="text" id="lastName" name="lastName" class="form-control"
+                   [(ngModel)]="userData.lastName"
                    required minlength="2" maxlength="30" pattern="^[A-Za-z]+$" #lastName="ngModel"/>
             <span class="field-info">?<span class="info-text">Field must be long between 2 and 30 characters and contain only latin letters!</span></span>
           </div>
@@ -55,7 +55,8 @@
         <div class="field-wrapper">
           <label for="country">Country:</label>
           <div>
-            <input type="text" class="form-control" name="country" id="country" value="{{userData?.country}}" ngModel
+            <input type="text" class="form-control" name="country" id="country"
+                   [(ngModel)]="userData.country"
                    #country="ngModel" pattern="[A-Za-z0-9\-\s]+"/>
             <span class="field-info">?<span class="info-text">Country is not required. Use only latin letters with word separation hyphens or white space.</span></span>
           </div>
@@ -71,7 +72,7 @@
         <div class="field-wrapper">
           <label for="city">City:</label>
           <div>
-            <input type="text" class="form-control" name="country" id="city" value="{{userData?.city}}" ngModel
+            <input type="text" class="form-control" name="city" id="city" [(ngModel)]="userData.city"
                    #city="ngModel" pattern="[A-Za-z0-9\-\s]+"/>
             <span class="field-info">?<span class="info-text">City is not required. Use only latin letters with word separation hyphens or white space.</span></span>
           </div>
@@ -88,7 +89,7 @@
         <div class="field-wrapper">
           <label for="address">Address :</label>
           <div>
-            <input type="text" class="form-control" name="address" id="address" value="{{userData?.address}}" ngModel
+            <input type="text" class="form-control" name="address" id="address" [(ngModel)]="userData.address"
                    #address="ngModel" pattern="[A-Za-z0-9_\-\s]+"/>
             <span class="field-info">?<span class="info-text">Address is not required. Use only latin letters and digits with word separation hyphens or white space.</span></span>
           </div>
@@ -104,7 +105,7 @@
         <div class="field-wrapper">
           <label for="phone">Phone number:</label>
           <div>
-            <input type="text" id="phone" name="phone" class="form-control" value="{{userData?.phone}}" ngModel
+            <input type="text" id="phone" name="phone" class="form-control" [(ngModel)]="userData.phone"
                    minlength="4" maxlength="21" pattern="^[+]?\d+$" #phone="ngModel"/>
 
             <span class="field-info">?
@@ -131,8 +132,7 @@
         <div class="field-wrapper">
           <label for="email">Email:</label>
           <div>
-            <input type="email" class="form-control" name="email" id="email" value="{{userData?.email}}" appEmail
-                   ngModel
+            <input type="email" class="form-control" name="email" id="email" [(ngModel)]="userData.email" appEmail
                    #email="ngModel" required/>
             <span class="field-info">?<span class="info-text">Field must contain valid email address</span></span>
           </div>
