Add page for clinic creation

--- a/medical-clinics-frontend/src/app/common/nav/nav.component.html
+++ b/medical-clinics-frontend/src/app/common/nav/nav.component.html
@@ -31,6 +31,9 @@
         }
         @if (isAdmin()) {
           <li>
+            <a routerLink="/add-clinic">Add clinic</a>
+          </li>
+          <li>
             <a routerLink="/users">Users</a>
           </li>
         }
