rename route from add-clinic to add-edit-clinic

--- a/medical-clinics-frontend/src/app/common/nav/nav.component.html
+++ b/medical-clinics-frontend/src/app/common/nav/nav.component.html
@@ -31,7 +31,7 @@
         }
         @if (isAdmin()) {
           <li>
-            <a routerLink="/add-clinic">Add clinic</a>
+            <a routerLink="/add-edit-clinic">Add clinic</a>
           </li>
           <li>
             <a routerLink="/users">Users</a>
