rename component add-clinic to add-edit-clinic and now can be used for editing

--- a/medical-clinics-frontend/src/app/pages/add-edit-clinic/add-edit-clinic.component.css
+++ b/medical-clinics-frontend/src/app/pages/add-edit-clinic/add-edit-clinic.component.css
@@ -76,6 +76,11 @@ p.error {
   margin: 0.5rem;
 }
 
+.input-image{
+  max-width: 13rem;
+  margin: 1rem;
+}
+
 .workday-container p {
   padding: 1rem;
 }
